[package]
name = "ero-project"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-size", "window-set-focus", "window-show", "window-hide", "global-shortcut-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
win-screenshot = "4.0.10"
leptonica-plumbing = "=1.0.0"
leptess = "0.14.0"
leptonica-sys = "=0.4.5"
opencv = { version = "0.91.3", features = ["clang-runtime"] }
image = "0.25.1"
base64 = "0.22.1"

[dependencies.tesseract-plumbing]
version = "0.8.0"
default-features = false


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
